test: keep station catalog assertions on Java 17